--- a/browser_dashboard.html
+++ b/browser_dashboard.html
@@ -68,7 +68,7 @@
         <h1>Browser Environment Dashboard</h1>
         <p><strong>Complete Name:</strong> [Charls John Clavo Cordova]</p>
         <p><strong>Sex:</strong> [Male]</p>
-        <p><strong>Address:</strong> [Your Address]</p>
+        <p><strong>Address:</strong> [Villa Peña, Bagumbayan Pequeño, Goa, Camarines Sur]</p>
         <p><strong>Course, Year, and Section:</strong> [BSIT, 2, B]</p>
         <p><strong>Name of School:</strong> [Partido State University]</p>
         <p><strong>Semester and Academic Year:</strong> [2nd Sem and AY 2024-2025]</p>
