Update and rename index.html to Student_Profile.html

--- a/Student_Profile.html
+++ b/Student_Profile.html
@@ -47,8 +47,8 @@
 
     <section class="links">
         <h2>Activity Links</h2>
-        <a href="index1.html" target="_blank">Guess the Secret Word Game (Previous Activity)</a>
-        <a href="browser_dashboard.html" target="_blank">Browser Environment Dashboard (Current Activity)</a>
+        <a href="Guess_The_Secret_Word_Game.html" target="_blank">Guess the Secret Word Game (1st Activity)</a>
+        <a href="Browser_Environment_Dashboard.html" target="_blank">Browser Environment Dashboard (2nd Activity)</a>
     </section>
 </body>
 </html>
