Update and rename index1.html to Guess_The_Secret_Word_Game.html

--- a/Guess_The_Secret_Word_Game.html
+++ b/Guess_The_Secret_Word_Game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Word Guessing Game</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Guess_The_Secret_Word_Game.css" />
 </head>
 <body>
     <div class="game-container">
@@ -15,6 +15,6 @@
         <button id="restartGame">Restart Game</button>
         <p id="message"></p>
     </div>
-    <script src="script.js"></script>
+    <script src="Guess_The_Secret_Word_Game.js"></script>
 </body>
 </html>
