--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="links">
         <h2>Activity Links</h2>
         <a href="Guess_The_Secret_Word_Game.html" target="_blank">Guess the Secret Word Game (1st Activity)</a>
-        <a href="Browser_Environment_Dashboard.html" target="_blank">Browser Environment Dashboard (2nd Activity)</a>
+        <a href="browser_dashboard.html" target="_blank">Browser Environment Dashboard (2nd Activity)</a>
     </section>
 </body>
 </html>
