--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h2>Activity Links</h2>
         <a href="Guess_The_Secret_Word_Game.html" target="_blank">Guess the Secret Word Game (1st Activity)</a>
         <a href="browser_dashboard.html" target="_blank">Browser Environment Dashboard (2nd Activity)</a>
+        <a href="dom_traversal.html" target="_blank">Interactive DOM Traversal and Manipulation</a>
     </section>
 </body>
 </html>
