--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="Guess_The_Secret_Word_Game.html" target="_blank">Guess the Secret Word Game</a>
         <a href="browser_dashboard.html" target="_blank">Browser Environment Dashboard</a>
         <a href="dom_traversal.html" target="_blank">Interactive DOM Traversal and Manipulation</a>
-        <a href="interactive_canvas.html" target="_blank>Interactive Canvas Shape Editor</a>
+        <a href="interactive_canvas.html" target="_blank">Interactive Canvas Shape Editor</a>
     </section>
 </body>
 </html>
